# AMFbot-Suite

./: .env.example  .gitignore  AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_GUIDE.md  Dockerfile  INSTALL_FR.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  dev.command  docker-compose.yaml  docker-compose.yml  elite-install.sh  install.sh  jarvis_main.py  launch.command  launch_daemon.sh  package-lock.json  package.json  setup_dev.sh  tsconfig.json
.agent/personas/: backend.md  frontend.md  security.md
.agent/workflows/: brainstorm.md  create.md  debug.md  deploy.md  test.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md  connectors.md  create-module.md  hardened-mode.md  llm-provider.md  multi-node.md  security-deep-dive.md
docs/permissions/: README.md
mcp-hub/: installer.ts  scanner.ts
mcp-hub/servers/: memory.json
modules/media-gen/: Dockerfile  downloader.py  pyproject.toml
modules/media-gen/api/: server.py
modules/media-gen/image/: flux_wrapper.py
modules/media-gen/video/: ltx_wrapper.py
scripts/: bootstrap-node.sh  bootstrap_elite.sh  check_permissions.sh  download_models.sh  setup_amf.sh  sync-knowledge.ts
setup/: install.sh
skills/: SKILL_TEMPLATE.md
skills/creative/: browser-control.md
skills/engineering/: senior-dev.md
skills/ops/: hardening.md
src/: main.ts
src/__tests__/: kernel.test.ts
src/adapters/: ollama.ts  telegram.ts
src/api/: dashboard.py
src/audit/: logger.ts
src/autonomy/: healing.ts  react.ts  sandbox.ts
src/bridge/: telegram.ts
src/cli/: index.ts
src/config/: env.ts
src/core/: __init__.py  agent.ts  event_bus.py  hardware-detector.ts  network.ts  orchestrator.py  orchestrator.ts  root-access.ts  router.ts  safety_guard.py  session-store.ts  skills.ts  speculative.ts  state_manager.py  tools.ts
src/gui/: gui_manager.py  overlay_window.py
static/: script.js  style.css
templates/: index.html
web/: index.html  package-lock.json
(+50 files in other folders)
